--- a/index.html
+++ b/index.html
@@ -8,155 +8,257 @@
       href="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficon1.png?v=1626829688866"
     />
     <title>Scape</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/test.css" />
     <script src="/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://matereal.glitch.me/font.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta property="og:type" content="website" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <header>
-      <span class="left"><b>Scape</b></span
-      ><span class="right"
-        ><a
-          href="https://gautaman.notion.site/A-guide-to-editing-Scape-options-1c7b703168a34a21a8bf96c900dd4657"
-          >Help</a
-        ></span
-      ><span class="left"
-        ><a href="https://github.com/littlegrapeguy/scape">GitHub</a></span
+      <h1>
+        The new tab page with simplicity in mind.
+      </h1>
+      <p class="sub">
+        Scape is a simple, customisable and open source new tab page.
+      </p>
+      <a
+        onclick="document.getElementById('install').scrollIntoView({ block: 'start', behavior: 'smooth', inline: 'start' });"
       >
+        <button class="spesh">
+          Install Scape ➞
+        </button>
+      </a>
+      <a
+        onclick="document.getElementById('features').scrollIntoView({ block: 'start', behavior: 'smooth', inline: 'start' });"
+      >
+        <button class="learn">
+          Learn more
+        </button>
+      </a>
+      <br />
+      <br />
+      <br />
+      <img
+        class="img"
+        width="100%"
+        draggable="false"
+        src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2FScreen%20Shot%202021-10-01%20at%208.48.43%20pm.png?v=1633085339452"
+      />
+      <br />
     </header>
-    <div class="parallax container">
-      <div class="centered">
-        <span>Scape</span>
-        <br />
-        Get on
+    <br />
+    <center id="features">
+      <div class="quote">
+        <h2>
+          Feature rich, but simple.
+        </h2>
+        <p>
+          We believe that a new tab page should have many customisation features
+          while still keeping it simple. That exact vision is what Scape is
+          today.
+        </p>
+      </div>
+    </center>
+    <div class="cards">
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-code-file-96.png?v=1633087550892"
+        />
+        <h1 class="desc">Free and open source</h1>
+        <p>
+          Scape is built on open source code, meaning that code is open to
+          anyone. It also completely free.
+        </p>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-test-account-96.png?v=1633087554794"
+        />
+        <h1 class="desc">Make Scape yours</h1>
+        <p>
+          Tweak Scape's wide range of settings to get Scape to look how you like
+          it.
+        </p>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-partly-cloudy-day-96.png?v=1633087552847"
+        />
+        <h1 class="desc">Accurate Weather</h1>
+        <p>
+          Scape has a fast and accurate weather service to make sure you know
+          what's waiting for you outside.
+        </p>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-laptop-96.png?v=1633087550892"
+        />
+        <h1 class="desc">Cross Platform</h1>
+        <p>
+          Scape is available to download on the Chrome Webstore, Mozilla
+          Add-ons, and Edge Extensions.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <br />
+    <center id="install">
+      <div class="quote">
+        <h2>
+          Install Scape.
+        </h2>
+        <p>
+          After using Scape, feel free to drop us (hopefully) positive review ☺️
+          .
+        </p>
+      </div>
+    </center>
+    <div class="cards">
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-chrome-240.png?v=1633088907683"
+        />
+        <h1 class="desc">Chrome Webstore</h1>
         <a
-          id="chrome"
           href="https://chrome.google.com/webstore/detail/scape/dkldckkbeofieloldnockglgblnfhinj"
+          target="_blank"
         >
-          <button>
-            Chrome
-          </button></a
-        >
-        or
+          <button class="spesh grey">
+            Install ➞
+          </button>
+        </a>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Fapple-touch-icon.79c2abeb4e35.png?v=1633088908755"
+        />
+        <h1 class="desc">Mozilla Add-ons</h1>
         <a
-          id="firefox"
           href="https://addons.mozilla.org/en-US/firefox/addon/scapenewtab/"
+          target="_blank"
         >
-          <button>
-            Firefox
+          <button class="spesh grey">
+            Install ➞
+          </button>
+        </a>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-microsoft-edge-240.png?v=1633088907048"
+        />
+        <h1 class="desc">Edge Extensions</h1>
+        <a
+          href="https://microsoftedge.microsoft.com/addons/detail/scape/ldbknaohjphmlhlfjdhnaiedkgfamfcj"
+          target="_blank"
+        >
+          <button class="spesh grey">
+            Install ➞
           </button>
         </a>
       </div>
     </div>
-    <div class="page">
-      <center>
-        <br />
-        <br />
-        <details>
-          <summary><b>Notice</b></summary>
-          <div class="slim">
-            <p>
-              We want to give you the best experience as soon as possible.
-              Therefore, we are delaying the currently disfunctional graphic
-              options editor and replacing it with a JSON editor. Later this
-              year, when version two gets released it will include in the full
-              graphic editor for customisation. Customisation is still in Scape,
-              just presented differently.
-            </p>
-            <p>
-              <b>- Thanks, RemiixGrape Inc.</b>
-            </p>
-          </div>
-        </details>
-      </center>
-      <br />
-      <br />
-      <div class="cards">
-        <div class="card">
-          <img
-            width="60px"
-            src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Fcode%20(1).svg?v=1626739487538"
-          />
-          <h1>Free and Open Source</h1>
-          <p>
-            Scape is open-source software, which means that the source code is
-            available to anyone. You can find the source code on
-            <a href="https://github.com/littlegrapeguy/scape">GitHub</a>.
-          </p>
-        </div>
-        <div class="card">
-          <img
-            width="60px"
-            src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Fstar.svg?v=1626739887576"
-          />
-          <h1>Customisable</h1>
-          <p>
-            Scape offers a wide range of customisations such as, time zones,
-            custom backgrounds, bookmarks and search engines.
-          </p>
-        </div>
-        <div class="card">
-          <img
-            width="60px"
-            src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Fcloud.svg?v=1626740147272"
-          />
-          <h1>Accurate Weather</h1>
-          <p>
-            Scape has a fast weather service to let you know what is waiting for
-            you outside.
-          </p>
-        </div>
-        <div class="card">
-          <img
-            width="60px"
-            src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Fglobe.svg?v=1626740373385"
-          />
-          <h1>Cross Platform</h1>
-          <p>
-            Scape is ready to meet your needs. Whether you are using a Firefox
-            based browser or a Chromium based browser you can still install
-            Scape.
-          </p>
-        </div>
-      </div>
-      <img
-        width="100%"
-        draggable="false"
-        src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2FScreen%20Shot%202021-07-20%20at%2010.57.36%20am.png?v=1626742679620"
-      />
-    </div>
-    <header>
-      <center>
-        © 2021 RemiixGrape Inc. All rights reserved. -
-        <span class="left"
-          ><a
-            href="https://gautaman.notion.site/How-to-use-Scape-Options-1c7b703168a34a21a8bf96c900dd4657"
-            ><b>Help</b></a
-          >, </span
-        ><span class="left"
-          ><a href="https://github.com/littlegrapeguy/scape"
-            ><b>GitHub</b></a
-          ></span
-        >
-        <br />
-        <br />
-        <a
-          href="https://www.producthunt.com/posts/scape?utm_source=badge-top-post-badge&utm_medium=badge&utm_souce=badge-scape"
-          target="_blank"
-          ><img
-            src="https://api.producthunt.com/widgets/embed-image/v1/top-post-badge.svg?post_id=305298&theme=dark&period=daily"
-            alt="Scape - Your new tab page, everyday | Product Hunt"
-            style="width: 250px; height: 54px;"
-            width="250"
-            height="54"
-        /></a>
-      </center>
-    </header>
+    <hr />
     <br />
+    <center>
+      <div class="quote">
+        <h2>
+          Bugs, feedback and help.
+        </h2>
+        <p>
+          Find help and reach out to us with the links below.
+        </p>
+      </div>
+    </center>
+    <div class="cards">
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-comments-96.png?v=1633091128940"
+        />
+        <h1 class="desc">Discord Server</h1>
+        <a href="https://discord.gg/stasX6cm9w" target="_blank">
+          <button class="spesh grey">
+            Join our Discord ➞
+          </button>
+        </a>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-email-send-96.png?v=1633091129432"
+        />
+        <h1 class="desc">Email</h1>
+        <a href="mailto:hello@gautaman.com">
+        <button class="spesh grey">
+          Send us an email ➞
+        </button>
+        </a>
+      </div>
+
+      <div class="card">
+        <img
+          width="60px"
+          src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-document-240.png?v=1633091128940"
+        />
+        <h1 class="desc">Notion Help Page</h1>
+        <a
+          href="https://gautaman.notion.site/A-guide-to-editing-Scape-options-1c7b703168a34a21a8bf96c900dd4657"
+          target="_blank"
+        >
+          <button class="spesh grey">
+            Get help ➞
+          </button>
+        </a>
+      </div>
+    </div>
+    <hr />
+    <br />
+    <div class="cards">
+      <div class="card">
+        <center><h1 class="desc">Check us out on Product Hunt</h1></center>
+        <center>
+          <a
+            href="https://www.producthunt.com/posts/scape?utm_source=badge-top-post-badge&utm_medium=badge&utm_souce=badge-scape"
+            target="_blank"
+            ><img
+              src="https://api.producthunt.com/widgets/embed-image/v1/top-post-badge.svg?post_id=305298&theme=dark&period=daily"
+              alt="Scape - Your new tab page, everyday | Product Hunt"
+              style="width: 250px; height: 54px;"
+              width="250"
+              height="54"
+          /></a>
+        </center>
+      </div>
+    </div>
+    <br />
+    <br />
+    <footer>© 2021 RmxGrp. All rights reserved.</footer>
   </body>
 </html>
