--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         />
         <h1 class="desc">Free and open source</h1>
         <p>
-          Scape is built on open source code, meaning that code is open to
+          Scape is <a href="https://github.com/RmxGrp/scape" class="link" target="_blank">open source</a>, meaning that code is open for inspection to
           anyone. It also completely free.
         </p>
       </div>
@@ -227,9 +227,9 @@
           width="60px"
           src="https://cdn.glitch.com/2452dc77-30ce-45a9-94a1-598718986f62%2Ficons8-document-240.png?v=1633091128940"
         />
-        <h1 class="desc">Notion Help Page</h1>
+        <h1 class="desc">Help Page</h1>
         <a
-          href="https://gautaman.notion.site/A-guide-to-editing-Scape-options-1c7b703168a34a21a8bf96c900dd4657"
+          href="https://www.notion.so/05b814038dcd435da69935ebae1ff976?v=e58be00ccab64d81af5b657a63e39cfb"
           target="_blank"
         >
           <button class="spesh grey">
